--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BagBag</title>
   <link rel="shortcut icon" href="images/Icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styling.css">
@@ -14,7 +13,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-danger">
 
       <a href="#" class="navbar-brand"><img src="images/Icon.png" alt="logo" height="60px"></a>
       <h1 class="bagify me-auto"><a href="index.html">BAGBAG</a></h1>
@@ -31,7 +30,7 @@
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">Section</a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu bg-danger">
               <li>
                 <a href="Men.html" class="dropdown-item">Men's Collection</a>
               </li>
@@ -408,11 +407,9 @@
   </div>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-
-  <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
